--- a/style.css
+++ b/style.css
@@ -309,3 +309,34 @@ body::after {
   border-right: 2px solid #000;
   border-left: 2px solid #000;
 }
+.custom-form {
+  background-color: #f2f2f2; 
+  color: #333; 
+  width: 300px; 
+  padding: 20px; 
+  border-radius: 10px; 
+  box-shadow: 3px 3px 5px #888888; 
+  position: absolute; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+.custom-input {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+
+.custom-button {
+  background-color: #007BFF;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
